Se creó con Colab

--- a/Untitled48.ipynb
+++ b/Untitled48.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKl8ht8eC650OWqb8PvlXp",
+      "authorship_tag": "ABX9TyNIX9Xx5swYG9HXZjNw8gDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,34 +75,112 @@
         "nltk.download('punkt')\n",
         "nltk.download('punkt_tab')\n",
         "\n",
-        "texto=\"Hola, este es un ejemplos. !Bienvenidos a la clase de PNL\"\n",
-        "tokens_palabras=word_tokenize(texto)\n",
-        "print(tokens_palabras)"
+        "texto=\"Hola, este es un ejemplo. !Bienvenidos a la clase de PNL\"\n",
+        "\n",
+        "tokens_oraciones = nltk.sent_tokenize(texto)\n",
+        "print(tokens_oraciones)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GakyGjq_LyLg",
-        "outputId": "f6de0b87-9348-424f-8b20-3bea5a0adb88"
+        "outputId": "ca68b84f-95a3-4261-a88b-7bd3ec158c7d"
       },
-      "execution_count": 4,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hola, este es un ejemplos.', '!Bienvenidos a la clase de PNL']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install vader\n"
+      ],
+      "metadata": {
+        "id": "gNunryEoUWmj",
+        "outputId": "de86107f-b5ae-4ac2-b023-3e35494deddf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Hola', ',', 'este', 'es', 'un', 'ejemplos', '.', '!', 'Bienvenidos', 'a', 'la', 'clase', 'de', 'PNL']\n"
+            "Collecting vader\n",
+            "  Downloading vader-0.0.3-py3-none-any.whl.metadata (2.3 kB)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.12/dist-packages (from vader) (1.6.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from vader) (2.0.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (from vader) (1.16.1)\n",
+            "Collecting sonopy (from vader)\n",
+            "  Downloading sonopy-0.1.2.tar.gz (3.3 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->vader) (1.5.2)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->vader) (3.6.0)\n",
+            "Downloading vader-0.0.3-py3-none-any.whl (4.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.8/4.8 MB\u001b[0m \u001b[31m24.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: sonopy\n",
+            "  Building wheel for sonopy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for sonopy: filename=sonopy-0.1.2-py3-none-any.whl size=2851 sha256=d3df9edb9e3ba26d957697c0b3de81540f2a367ecfeb5c10a96c772610ffc950\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0e/10/1a/c32740bfd1dca898103c721f32ab1769a9a14ee6d1cba51a62\n",
+            "Successfully built sonopy\n",
+            "Installing collected packages: sonopy, vader\n",
+            "Successfully installed sonopy-0.1.2 vader-0.0.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+        "nltk.download('vader_lexicon')\n",
+        "sia = SentimentIntensityAnalyzer()\n",
+        "oracion_sentimiento = \"I am living bad.\"\n",
+        "sentimiento = sia.polarity_scores(oracion_sentimiento)\n",
+        "print(\"Análisis de sentimientos:\", sentimiento)"
+      ],
+      "metadata": {
+        "id": "470JmWwPUfx3",
+        "outputId": "443e2c11-0dfd-4869-f72d-b51a25ed8aeb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Análisis de sentimientos: {'neg': 0.636, 'neu': 0.364, 'pos': 0.0, 'compound': -0.5423}\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+            "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n",
+            "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
           ]
         }
       ]
